@@ -3,7 +3,6 @@ package top.gregtao.concerto.music;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
-import com.mojang.datafixers.util.Pair;
 import com.mojang.serialization.Codec;
 import net.minecraft.util.StringIdentifiable;
 import top.gregtao.concerto.api.*;
@@ -16,13 +15,14 @@ import top.gregtao.concerto.music.meta.music.BasicMusicMetaData;
 import top.gregtao.concerto.music.meta.music.MusicMetaData;
 import top.gregtao.concerto.music.meta.music.UnknownMusicMeta;
 import top.gregtao.concerto.util.FileUtil;
+import top.gregtao.concerto.util.Pair;
 
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.List;
 
-public class NeteaseCloudMusic extends Music implements CacheableMusic, DynamicPath {
+public class NeteaseCloudMusic extends Music implements CacheableMusic, DynamicPath, Likeable {
     private final String id;
     private final Level level;
     private String rawPath, rawLyrics, rawSubLyrics;
@@ -41,10 +41,15 @@ public class NeteaseCloudMusic extends Music implements CacheableMusic, DynamicP
     @Override
     public InputStream getMusicSource() throws MusicSourceNotFoundException {
         try {
-            return FileUtil.createBuffered(new HttpURLInputStream(new URL(this.getRawPath())));
+            return FileUtil.createBuffered(new HttpURLInputStream(URI.create(this.getRawPath()).toURL(), this::getRawPath));
         } catch (Exception e) {
             throw new MusicSourceNotFoundException(e);
         }
+    }
+
+    @Override
+    public String getLink() {
+        return "https://music.163.com/song?id=" + this.getId();
     }
 
     public String getRawPath() {
@@ -61,6 +66,7 @@ public class NeteaseCloudMusic extends Music implements CacheableMusic, DynamicP
 
     @Override
     public String getLastLyrics() {
+        if (this.rawLyrics == null) this.getLyrics();
         return this.rawLyrics;
     }
 
@@ -132,6 +138,16 @@ public class NeteaseCloudMusic extends Music implements CacheableMusic, DynamicP
     @Override
     public Music getMusic() {
         return this;
+    }
+
+    @Override
+    public boolean likeIt() {
+        return NeteaseCloudApiClient.LOCAL_USER.likeMusic(this);
+    }
+
+    @Override
+    public boolean dislikeIt() {
+        return NeteaseCloudApiClient.LOCAL_USER.dislikeMusic(this);
     }
 
     public enum Level implements SimpleStringIdentifiable {
